모델 훌련 중 nan 오류 해결중

--- a/bitcoin_with_RNN.ipynb
+++ b/bitcoin_with_RNN.ipynb
@@ -41,8 +41,39 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.scatter(data[\"timestamp\"], data[\"close\"])\n",
-    "plt.show()"
+    "data = data[['open', 'high', 'low', 'close', 'volume']]\n",
+    "\n",
+    "# Normalize the data using Min-Max scaling\n",
+    "scaler = MinMaxScaler()\n",
+    "data_normalized = scaler.fit_transform(data)\n",
+    "\n",
+    "# Prepare the input and target data for the RNN\n",
+    "sequence_length = 10  # Length of sequences for input data\n",
+    "\n",
+    "# Generate sequences for RNN\n",
+    "sequences = []\n",
+    "targets = []\n",
+    "for i in range(len(data_normalized) - sequence_length):\n",
+    "    sequences.append(data_normalized[i:i+sequence_length])\n",
+    "    targets.append(data_normalized[i+sequence_length, 3])  # Predicting 'close' price\n",
+    "\n",
+    "# Convert to numpy arrays\n",
+    "sequences = np.array(sequences)\n",
+    "targets = np.array(targets)\n",
+    "\n",
+    "# Split the data into training and testing sets\n",
+    "X_train, X_test, y_train, y_test = train_test_split(sequences, targets, test_size=0.2, random_state=42)\n",
+    "\n",
+    "# Build the RNN model\n",
+    "model = Sequential()\n",
+    "model.add(SimpleRNN(64, input_shape=(sequence_length, 5), activation='relu'))\n",
+    "model.add(Dense(1))  # Output layer with one neuron for regression\n",
+    "\n",
+    "# Compile the model\n",
+    "model.compile(optimizer='adam', loss='mean_squared_error')\n",
+    "\n",
+    "# Train the model\n",
+    "model.fit(X_train, y_train, epochs=10, batch_size=32, validation_data=(X_test, y_test))"
    ]
   },
   {
